🚧: Update blog content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,14 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '@/consts';
 <html lang="en">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+		<style>
+			main {
+				width: 75%;
+			}
+			p {
+				text-align: justify;
+			}
+		</style>
 	</head>
 	<body>
 		<Header />
