--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -15,7 +15,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<BaseHead title={title} description={description} />
 		<style>
 			main {
-				width: calc(100% - 2em);
+				width: calc(100%);
 				max-width: 100%;
 				margin: 0;
 			}
@@ -29,8 +29,8 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				box-shadow: var(--box-shadow);
 			}
 			.prose {
-				width: 720px;
-				max-width: calc(100% - 2em);
+				width: 80%;
+				max-width: calc(100% - 1em);
 				margin: auto;
 				padding: 1em;
 				color: rgb(var(--gray-dark));
@@ -64,7 +64,11 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				<div class="prose">
 					<div class="title">
 						<div class="date">
-							<FormattedDate date={pubDate} />
+							{
+								pubDate && (
+									<FormattedDate date={pubDate} />
+								)
+							}
 							{
 								updatedDate && (
 									<div class="last-updated-on">
